force-app/main/default/objects/permit_card__mdt/permit_card__mdt.object-meta.xml
<CustomObject>
    <description>販売で使用</description>
    <label>許可票</label>
</CustomObject>