force-app/main/default/objects/permit_card__mdt/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <description>販売で使用</description>
    <label>大カテゴリ</label>
    <referenceTo>RequestCategory_mdt__mdt</referenceTo>
    <relationshipLabel>許可票</relationshipLabel>
    <relationshipName>category</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>