force-app/main/default/objects/permit_card__mdt/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>販売で使用</description>
    <label>小カテゴリ</label>
    <referenceTo>RequestSubCategory_mdt__mdt</referenceTo>
    <relationshipLabel>許可票</relationshipLabel>
    <relationshipName>Detail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>