force-app/main/default/objects/permit_card__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>販売で使用</description>
    <label>表示順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>