force-app/main/default/objects/permit_card__mdt/fields/ToDept__c.field-meta.xml
<CustomField>
    <fullName>ToDept__c</fullName>
    <description>販売で使用</description>
    <label>依頼先部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>